# unity-gamelibs-builder

./: .gitignore  NineSols.GameLibs.csproj  README.md  build.py  pyproject.toml
src/gamelibs_builder/: __init__.py  build.py  cli.py  game_version.py  utils.py
src/gamelibs_builder/data/: LICENSE  README.md  Template.GameLibs.csproj  __PackageName__.GameLibs.csproj
