[project]
name = "gamelibs-builder"
version = "0.1.0"
description = "A utility to easily build publicized and stripped managed .NET dlls from a unity game's libs."
readme = "README.md"
authors = [
    { name = "nozwock" }
]
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "more-itertools>=10.8.0",
    "python-rapidjson>=1.23",
    "typer>=0.24.1",
]

[project.scripts]
unity-gamelibs = "gamelibs_builder:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
